--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maple Bear SAF — Dashboard</title>
-    <meta name="description" content="Sistema de Gestão de Licenças Canva para Escolas Maple Bear" />
-    <meta name="author" content="Maple Bear SAF" />
-    <meta name="theme-color" content="#c41e3a" />
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MapleBear - Licenças Canva</title>
+    <meta name="description" content="Sistema de gerenciamento de licenças Canva para escolas MapleBear">
+    <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div id="app">
+        <div id="loading" class="loading-spinner">
+            <div class="spinner"></div>
+            <p>Carregando...</p>
+        </div>
+        
+        <!-- Main content will be dynamically loaded here -->
+        <main id="main-content" style="display:none;"></main>
+    </div>
 
-    <meta property="og:title" content="Maple Bear SAF — Dashboard" />
-    <meta property="og:description" content="Sistema de Gestão de Licenças Canva para Escolas Maple Bear" />
-    <meta property="og:type" content="website" />
+    <!-- Toast container -->
+    <div id="toast-container" class="toast-container"></div>
 
-    <meta name="twitter:card" content="summary_large_image" />
-    
-    <!-- Fonte Inter -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
-  </head>
+    <!-- Modal container -->
+    <div id="modal-container" class="modal-container"></div>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <script type="module" src="/src/app.ts"></script>
+</body>
 </html>
