feat: Configuração e otimização do ambiente local para testes

--- a/index.html
+++ b/index.html
@@ -5,28 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MapleBear - Licenças Canva</title>
     <meta name="description" content="Sistema de gerenciamento de licenças Canva para escolas MapleBear">
-    <link rel="stylesheet" href="/assets/styles.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="app">
-        <div id="loading" class="loading-spinner">
-            <div class="spinner"></div>
-            <p>Carregando...</p>
-        </div>
-        
-        <!-- Main content will be dynamically loaded here -->
-        <main id="main-content" style="display:none;"></main>
+    <div id="root">
+
     </div>
 
-    <!-- Toast container -->
-    <div id="toast-container" class="toast-container"></div>
 
-    <!-- Modal container -->
-    <div id="modal-container" class="modal-container"></div>
 
-    <script type="module" src="/src/app.ts"></script>
+    <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
