chore: commit pending changes

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MapleBear - Licenças Canva</title>
+    <title>SAF Maple Bear</title>
+    <link rel="icon" type="image/png" href="/saf-logo.png">
     <link rel="stylesheet" href="/src/assets/styles.css">
-    <meta name="description" content="Sistema de gerenciamento de licenças Canva para escolas MapleBear">
+    <meta name="description" content="SAF Maple Bear - Sistema de gerenciamento de licencas Canva para escolas Maple Bear">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
